--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Seccion playmoclickland -->
         <div class="playmoclickland">
             <p class="mensaje_secciones">Playmoclickland</p>
-            <img src="./img/playmoclickland/fondo_playmoclickland.jpg" alt="fondo_playmo" class="fondo_plamoclickland">
+            <img src="./img/playmoclickland/ultimo4.jpeg" alt="fondo_playmo" class="fondo_plamoclickland">
         </div>
         <!-- Seccion dioramas -->
         <div class="dioramas">
