Con efecto prisma en imagens..

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
             <video class="video" src="./img/last jobs/Santiago3.mp4" autoplay=1 width="100%" loop muted preload="auto"></video>  
         </div>
         <!-- Seccion instants -->
-        <div class="instants">
-            <p class="mensaje_secciones">Nuestros instants..</p>
-            <img src="./img/instants/fondo_instants.jpg" alt="fondo_intants" class="fondo_intants">
+        <div class="card instants">
+            <div class="card__face card__face--front">
+                <p class="mensaje_secciones">Nuestros instants..</p>
+                <img src="./img/instants/fondo_instants.jpg" alt="fondo_intants" class="fondo_intants">
+            </div>
+            <div class="card__face card__face--back"><h6>Enlaces fotografia...</h6></div>
+          
         </div>
         <!-- Seccion playmoclickland -->
         <div class="playmoclickland">
@@ -47,6 +51,6 @@
             
         </div>
     </div>
-
+    <script src="./js/index.js"></script>
 </body>
 </html>
