efecto prisma terminado

--- a/index.html
+++ b/index.html
@@ -37,14 +37,21 @@
           
         </div>
         <!-- Seccion playmoclickland -->
-        <div class="playmoclickland">
-            <p class="mensaje_secciones">Playmoclickland</p>
-            <img src="./img/playmoclickland/ultimo4.jpeg" alt="fondo_playmo" class="fondo_plamoclickland">
+        <div class=" card playmoclickland">
+            <div class="card__face card__face--front">
+                 <p class="mensaje_secciones">Playmoclickland</p>
+                 <img src="./img/playmoclickland/ultimo4.jpeg" alt="fondo_playmo" class="fondo_plamoclickland">
+            </div>
+            <div class="card__face card__face--back"><h6>Enlaces playmoclickland...</h6></div>
+           
         </div>
         <!-- Seccion dioramas -->
-        <div class="dioramas">
-            <p class="mensaje_secciones">Dioramas</p>
-            <img src="./img/dioramas/fondo_dioramas.jpg" alt="fondo_dioramas" class="fondo_dioramas">
+        <div class="card dioramas">
+            <div class="card__face card__face--front">
+                <p class="mensaje_secciones">Dioramas</p>
+                <img src="./img/dioramas/fondo_dioramas.jpg" alt="fondo_dioramas" class="fondo_dioramas">
+            </div>
+            <div class="card__face card__face--back"><h6>Enlaces dioramas...</h6></div>
         </div>
         <!-- Seccion en blanco -->
         <div class="seccion_blanco">
