para probar ya..

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                  <img src="./img/playmoclickland/ultimo4.jpeg" alt="fondo_playmo" class="fondo_plamoclickland">
             </div>
             <div class="card__face card__face--back ocultar">
-                <<p class="mensaje_secciones_2">Playmoclickland</p>
+                <p class="mensaje_secciones_2">Playmoclickland</p>
             </div>
            
         </div>
@@ -56,7 +56,7 @@
                 <img src="./img/dioramas/fondo_dioramas_2.jpg" alt="fondo_dioramas" class="fondo_dioramas">
             </div>
             <div class="card__face card__face--back ocultar">
-                <<p class="mensaje_secciones_2">Dioramas</p>
+                <p class="mensaje_secciones_2">Dioramas</p>
             </div>
         </div>
         <!-- Seccion en blanco -->
