empezamos los enlaces...

--- a/index2.html
+++ b/index2.html
@@ -15,13 +15,15 @@
             <video class="video" src="./img/last jobs/Santiago3.mp4" autoplay=1 loop muted preload="auto"></video> 
         </div> 
         <div class="instants">
-            <a href="#" class="enlaces">Nuestros instants..</a>
-        </div>    
+            <p class="enlaces">Nuestros instants..<p/>
+                <div class="enlaces_instants"><p>prueba</p></div> 
+        </div> 
+          
         <div class="playmoclickland">
-            <a href="#" class="enlaces">Playmoclickland</a>
+            <p class="enlaces">Playmoclickland<p/>
         </div>   
         <div class="dioramas">
-            <a href="#" class="enlaces">Dioramas</a>
+            <p class="enlaces">Dioramas</>
         </div>  
     </div>
 </body>
