--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,10 @@
         </div> 
         <div class="instants">
             <p class="enlaces">Nuestros instants..<p/>
-                <div class="enlaces_instants"><p>prueba</p></div> 
+            <div class="enlaces_instants">
+                <p class="texto_enlaces">prueba</p>
+                <img src="./img/instants/fondo_instants.jpg" alt="fondo_intants" class="fondo_intants">
+            </div> 
         </div> 
           
         <div class="playmoclickland">
