Volvemos al index1

--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,12 @@
     <div class="contenedor">
         <div class="logo">
             <img src="./img/logos/logo_white.png" alt="Logo instants negro" class="logo_instants">
+             
+        </div>
+        <div class="mensaje">
+            <p>El mundo necesita algo de magia...</p>
+            <img src="./img/logos/logo_facebook.svg.png" alt="logo facebook" class="logo_facebook">
+            <a href="https://www.facebook.com/The.World.Needs.Magic.Foundation"> The.World.Needs.Magic.Foundation</a>
         </div>
         <div class="video-container">
             <video class="video" src="./img/last jobs/Santiago3.mp4" autoplay=1 loop muted preload="auto"></video> 
