enpezando la lista de enlaces

--- a/index.html
+++ b/index.html
@@ -46,6 +46,42 @@
             </div>
             <div class="card__face card__face--back ocultar">
                 <p class="mensaje_secciones_2">Playmoclickland</p>
+                <div class="facebook_click">
+                    <img src="./img/logos/logo_facebook.svg.png" alt="logo facebook" class="logo_facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100093422456051"> playmoclickland</a>
+                    <img src="./img/logos/logo_instagram.png" alt="logo facebook" class="logo_facebook">
+                    <a href="https://www.instagram.com/playmoclickland/"> playmoclickland</a>
+                    <div class="enlaces_play">
+                        <ul>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                            <li>esto es un enlace</li>
+                        </ul>
+                    </div>
+                </div>
+                
             </div>
            
         </div>
