--- a/index2.html
+++ b/index2.html
@@ -22,10 +22,10 @@
         </div> 
         <div class="instants">
             <p class="enlaces">Nuestros instants..<p/>
-            <div class="enlaces_instants">
+            <!-- <div class="enlaces_instants">
                 <p class="texto_enlaces">prueba</p>
                 <img src="./img/instants/fondo_instants.jpg" alt="fondo_intants" class="fondo_intants">
-            </div> 
+            </div>  -->
         </div> 
           
         <div class="playmoclickland">
