Modificacndo video_fondo

--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
             <a href="https://www.facebook.com/The.World.Needs.Magic.Foundation"> The.World.Needs.Magic.Foundation</a>
         </div>
         <div class="video-container">
-            <video class="video" src="./img/last jobs/Santiago4.mp4" autoplay=1 loop muted preload="auto"></video> 
+            <video class="video" src="./img/last jobs/Video_montaje_1.mp4" autoplay=1 loop muted preload="auto"></video> 
         </div> 
         <div class="instants">
             <p class="enlaces">Nuestros instants..<p/>
