--- a/index.html
+++ b/index.html
@@ -17,11 +17,22 @@
             <a href="https://www.facebook.com/The.World.Needs.Magic.Foundation"> The.World.Needs.Magic.Foundation</a>
         </div>
         <div class="video-container">
-            <video class="video" src="./img/last jobs/Video_montaje_1.mp4" autoplay=1 loop muted preload="auto"></video> 
+            <video class="video" src="./img/last jobs/Video_fondo.mp4" autoplay=1 loop muted preload="auto"></video> 
         </div> 
+        <div class="carrusel">
+            <div class="carrusel_instants">
+                <img src="./img/logos/logo_white.png" alt="Logo instants negro" class="imagens_instants">  
+            </div>
+            <div class="carrusel_play">
+                <img src="./img/logos/logo_white.png" alt="Logo instants negro" class="imagens_play">  
+            </div>
+            <div class="carrusel_dioramas">
+                <img src="./img/logos/logo_white.png" alt="Logo instants negro" class="imagens_dioramas">  
+            </div>
+        </div>
         <div class="instants">
             <p class="enlaces">Nuestros instants..<p/>
-                <a href="www.instant.es"> www.instant.es</a>
+                <a href="http://instants.es/web/"> instant.es</a>
             <!-- <div class="enlaces_instants">
                 <p class="texto_enlaces">prueba</p>
                 <img src="./img/instants/fondo_instants.jpg" alt="fondo_intants" class="fondo_intants">
