Funcionando el carrusel de instants

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </div> 
         <div class="carrusel">
             <div class="carrusel_instants">
-                <img src="./img/logos/logo_white.png" alt="Logo instants negro" class="imagens_instants">  
+                <img src="./img/instants/imagenes_carrusel/instants_1.jpg" alt="Logo instants negro" class="imagens_instants">  
             </div>
             <div class="carrusel_play">
-                <img src="./img/logos/logo_white.png" alt="Logo instants negro" class="imagens_play">  
+                <img src="./img/playmoclickland/imagenes_carrusel/play_1.jpg" alt="Logo instants negro" class="imagens_play">  
             </div>
             <div class="carrusel_dioramas">
-                <img src="./img/logos/logo_white.png" alt="Logo instants negro" class="imagens_dioramas">  
+                <img src="./img/dioramas/imagenes_carrusel/dioramas_1.jpg" alt="Logo instants negro" class="imagens_dioramas">  
             </div>
         </div>
         <div class="instants">
@@ -52,5 +52,6 @@
             
         </div>  
     </div>
+    <script src="./js/index.js"></script>
 </body>
 </html>
