--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div> 
         <div class="carrusel">
             <div class="carrusel_instants">
-                <img src="./img/instants/imagenes_carrusel/instants_1.jpg" alt="Logo instants negro" class="imagens_instants">  
+                <img src="./img/instants/imagenes_carrusel/instants_1.jpg" alt="Logo instants negro" class="imagens_instants" id="imagens_instants">  
             </div>
             <div class="carrusel_play">
                 <img src="./img/play/imagenes_carrusel/play_1.jpg" alt="Logo instants negro" class="imagens_play">  
